--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,3 +5,9 @@ stages:
     - get_data.py
     outs:
     - data_raw.csv
+  process_data:
+    cmd: python process_data.py
+    deps:
+    - data_raw.csv
+    outs:
+    - data_processed.csv
