--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -9,3 +9,5 @@ jobs:
         run: |
           make install
           dvc repro
+          git fetch --prune
+          dvc metrics: diff --show-md master > report.md
